[package]
name = "oran"
version = "0.1.0"
edition = "2021"
authors = [ "PwnWriter < hey@pwnwriter.xyz >" ]
description = "An x11 window swallor"
readme = "README.md"
repository = "https://github.com/metis-os/oran"
homepage = "https://github.com/metis-os/oran.git"
license = "MIT"
keywords = ["x11", "swallowing",]
categories = ["accessibility", "command-line" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }

[profile.dev]
opt-level = 0
debug = true
panic = "abort"

[profile.test]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
panic = "unwind"
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
debug = false
